--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -25,7 +25,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  z-index: 1;
+  z-index: 2;
   will-change: transform;
   overflow: visible;
 }
@@ -38,13 +38,11 @@
   position: absolute;
   bottom: 0;
   left: 50%;
+  transform: translateX(-50%);
   max-width: 868px;
   max-height: 90vh;
   z-index: 1;
-  will-change: transform;
   pointer-events: none;
-  transform-style: preserve-3d;
-  backface-visibility: hidden;
   display: flex;
   align-items: flex-end;
   justify-content: center;
