--- a/src/components/Home/StrikeText/StrikeText.css
+++ b/src/components/Home/StrikeText/StrikeText.css
@@ -1,9 +1,9 @@
 .strike-text-svg {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 50%;
   transform: translateY(-50%);
-  z-index: 10;
+  z-index: 4;
   pointer-events: none;
   user-select: none;
   width: 50vw;
