--- a/src/components/Home/StrikeText/StrikeText.css
+++ b/src/components/Home/StrikeText/StrikeText.css
@@ -13,6 +13,14 @@
   opacity: 0.2;
 }
 
+@media (max-width: 767px) {
+  .strike-text-svg {
+    min-width: 300px;
+    position: absolute;
+    transform: translateY(-50%);
+  }
+}
+
 .strike-svg {
   width: 100%;
   max-width: 1200px;
