--- a/src/components/common/Header/Header.css
+++ b/src/components/common/Header/Header.css
@@ -1,8 +1,6 @@
 /* Header */
 .page-header {
-  position: fixed;
-  top: 0;
-  left: 0;
+  position: relative;
   width: 100%;
   height: auto;
   display: grid;
